@startuml Establishing a Connection

set separator . 
skinparam classSeparator "."
skinparam packageSeparator "."
top to bottom direction

class "ConnectionFactory" as soniccontrol.communication.connection_factory.ConnectionFactory {
  {abstract}open_connection() -> Tuple[asyncio.StreamReader, asyncio.StreamWriter]
}

class "Communicator" as soniccontrol.communication.communicator.Communicator {
  DISCONNECTED_EVENT : str
  connection_opened
  handshake_result
  {abstract}close_communication() -> None
  {abstract}open_communication(connection_factory: ConnectionFactory)
}

class "CommunicatorBuilder" as soniccontrol.communication.communicator_builder.CommunicatorBuilder {
  build(connection_factory: ConnectionFactory, logger: logging.Logger) -> tuple[Communicator, Union[CommandSet, CommandSetLegacy]]
}

class "DeviceBuilder" as soniccontrol.builder.DeviceBuilder {
  build_amp(ser: Communicator, commands: Union[CommandSet, CommandSetLegacy], logger: logging.Logger) -> SonicDevice
}

class "SonicDevice" as soniccontrol.sonic_device.SonicDevice {
  info
  serial
  status
  disconnect() -> None
}

class "Updater" as soniccontrol_gui.state_fetching.updater.Updater {
  running
  execute() -> None
  stop_execution() -> None
}

class "AppState" as soniccontrol_gui.views.core.app_state.AppState {
  EXECUTION_STATE_PROP_NAME : str
  execution_state
}
class "RescueWindow" as soniccontrol_gui.views.core.device_window.RescueWindow {
}
class "KnownDeviceWindow" as soniccontrol_gui.views.core.device_window.KnownDeviceWindow {
}
class "DeviceWindow" as soniccontrol_gui.views.core.device_window.DeviceWindow {
  CLOSE_EVENT : str
  close() -> None
  on_disconnect() -> None
}
class "DeviceWindowManager" as soniccontrol_gui.views.core.connection_window.DeviceWindowManager {
  open_known_device_window(sonicamp: SonicDevice, connection_name: str) -> DeviceWindow
  open_rescue_window(communicator: Communicator, connection_name: str) -> DeviceWindow
}
class "ConnectionWindow" as soniccontrol_gui.views.core.connection_window.ConnectionWindow {
  is_connecting
}

soniccontrol.sonic_device.SonicDevice --> soniccontrol.communication.communicator.Communicator : _serial
soniccontrol.sonic_device.SonicDevice <.u. soniccontrol.builder.DeviceBuilder : builds
soniccontrol.communication.communicator.Communicator *-u- soniccontrol.communication.connection_factory.ConnectionFactory
soniccontrol.communication.communicator.Communicator <.. soniccontrol.communication.communicator_builder.CommunicatorBuilder : builds

soniccontrol_gui.views.core.connection_window.ConnectionWindow --|> soniccontrol_gui.ui_component.UIComponent
soniccontrol_gui.views.core.device_window.DeviceWindow --|> soniccontrol_gui.ui_component.UIComponent
soniccontrol_gui.views.core.device_window.KnownDeviceWindow --|> soniccontrol_gui.views.core.device_window.DeviceWindow
soniccontrol_gui.views.core.device_window.RescueWindow --|> soniccontrol_gui.views.core.device_window.DeviceWindow
soniccontrol_gui.state_fetching.updater.Updater --* soniccontrol_gui.views.core.device_window.KnownDeviceWindow : _updater
soniccontrol_gui.views.core.connection_window.DeviceWindowManager --* soniccontrol_gui.views.core.connection_window.ConnectionWindow : _device_window_manager
soniccontrol_gui.views.core.device_window.DeviceWindow -l-> soniccontrol_gui.views.core.app_state.AppState : app_state

soniccontrol_gui.views.core.device_window.DeviceWindow --* soniccontrol_gui.views.core.connection_window.DeviceWindowManager : _open_windows

soniccontrol_gui.views.core.device_window.DeviceWindow -l-> soniccontrol.sonic_device.SonicDevice : _device
soniccontrol_gui.views.core.connection_window.ConnectionWindow -l-> soniccontrol.sonic_device.SonicDevice : _device

@enduml